# sdns-rust

./: Cargo.toml  README.md
src/: main.rs
src/args/: mod.rs
src/async_sdns/: mod.rs
src/help/: mod.rs
src/sdns/: find_ipv4_register.rs  find_mx_register.rs  find_ns_register.rs  find_txt_register.rs  mod.rs
src/sync_sdns/: mod.rs
